--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:mbn_backgroundBottomColor="@color/colorBlue"
-        app:mbn_countBackgroundColor="@color/colorBlue"
+        app:mbn_backgroundBottomColor="@color/colorPurple"
+        app:mbn_countBackgroundColor="@color/colorPurple"
         app:mbn_defaultIconColor="@color/colorWhite"
         app:mbn_rippleColor="@color/colorAccent"
         app:mbn_selectedIconColor="@color/colorWhite"
