--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="PurpleText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPurple</item>
+    </style>
     <style name="BlueText" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/colorBlue</item>
     </style>
