--- a/app/src/main/res/drawable-v24/splash_background.xml
+++ b/app/src/main/res/drawable-v24/splash_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorPrimary" />
+    <item android:drawable="@drawable/gradient_purple" />
     <item
         android:gravity="center"
-        android:drawable="@drawable/logo_small">
+        android:drawable="@drawable/motoflash_logo_white">
     </item>
 </layer-list>
