--- a/motoboy/src/main/res/layout/activity_login.xml
+++ b/motoboy/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/logo_small"
+        android:src="@drawable/motoflash_logo_blue"
         android:tint="@color/colorBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Motoflash"
+        android:text="MotoFlash"
         android:textColor="@color/colorBlue"
         android:textSize="32sp"
         android:textStyle="bold"
