--- a/motoboy/src/main/res/layout/activity_splash.xml
+++ b/motoboy/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/gradient_blue"
     android:id="@+id/container"
     tools:context=".ui.splash.SplashActivity">
 
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_small" />
+        app:srcCompat="@drawable/motoflash_logo_white" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -40,7 +40,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:alpha="0"
-        android:text="Motoflash"
+        android:text="MotoFlash"
         android:textColor="@color/colorWhite"
         android:textSize="32sp"
         android:textStyle="bold"
