--- a/motoboy/src/main/res/values/colors.xml
+++ b/motoboy/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2E6FF2</color>
-    <color name="colorPrimaryDark">#0D56EB</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorPrimary">@color/colorBlue</color>
+    <color name="colorPrimaryDark">@color/colorBlueDark</color>
+    <color name="colorAccent">@color/colorBlueLight</color>
 </resources>
