--- a/core/src/main/res/layout/dialog_input_text.xml
+++ b/core/src/main/res/layout/dialog_input_text.xml
@@ -31,6 +31,7 @@
            />
 
        <EditText
+           android:background="@drawable/rectangle_cornes_gray"
                android:id="@+id/edtInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
@@ -40,18 +41,18 @@
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
-               android:textColor="@color/colorWhite"/>
+               />
 
        <Button
-               android:id="@+id/btnSend"
-               style="@android:style/Widget.Material.Light.Button.Borderless"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_gravity="bottom|center_horizontal"
-               android:layout_marginTop="15dp"
-               android:paddingStart="20dp"
-               android:paddingEnd="20dp"
-               android:text="Enviar" />
+           android:id="@+id/btnSend"
+           style="@style/Widget.AppCompat.Button.Colored"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="bottom|center_horizontal"
+           android:layout_marginTop="15dp"
+           android:paddingStart="20dp"
+           android:paddingEnd="20dp"
+           android:text="Enviar" />
    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
